--- a/Mes_competences.html
+++ b/Mes_competences.html
@@ -12,8 +12,8 @@
             <nav id="navigation">
                 <ul id="listenonord">
                     <li class="listemenu"><a href="index.html" class="lienpages"><button class="onglet">Accueil</button></a></li>
-                    <li class="listemenu"><a href="Qui_suis_je.html" class="lienpages"><button class="onglet">Qui suis-je ?</button></a></li>
-                    <li class="listemenu"><a href="Mes_competences.html" class="lienpages"><button class="onglet">Compétences</button></a>
+                    
+                    <li class="listemenu"><a href="Mes_competences.html" class="lienpages"><button class="onglet">Expériences professionnelles / Compétences</button></a>
                         <!--<ul id="sousmenu">
                             <li><a href="#competence-gen">Compétences générales</a></li>
                             <li><a href="#competence-dev">Compétences développement d'applications</a></li>
@@ -29,8 +29,19 @@
         </div> 
 
         <div id="espace"></div>
+        <h1>Mes expériences professionnelles</h1>
+        <table class="tab">
+            <tr class="ligne">
+                <td class="cell">photo</td>
+                <td class="cell">Janvier - Février 2021 : Stage chez NTN-SNR</td>
+            </tr>
+        </table>
+        <div class="lienprojet">
+            <center><button class="btn"><a href="Mes_realisations/stage_ntn_snr.html" class="link">en savoir plus</a></button></center>
+        </div>
         <div id="competence-gen">
-            <h1>Mes compétences générales</h1><br>
+            <h1>Mes compétences</h1><br>
+            <h3>Générales</h3>
             <table>
                 <thead>
                     <tr>
@@ -74,7 +85,7 @@
         </div>
 
         <div id="competence-dev">
-            <h1>Mes compétences en développement d'applications</h1>
+            <h3>Développement d'applications</h3>
             <table>
                 <thead>
                     <tr>
@@ -128,7 +139,7 @@
         </div>
 
         <div id="competence-res">
-            <h1>Mes compétences en infrastructure / DevOps</h1>
+            <h3>Infrastructure / DevOps</h3>
             <table>
                 <thead>
                     <tr>
