--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <nav id="navigation">
                 <ul id="listenonord">
                     <li class="listemenu"><a href="index.html" class="lienpages"><button class="onglet">Accueil</button></a></li>
-                    <li class="listemenu"><a href="Qui_suis_je.html" class="lienpages"><button class="onglet">Qui suis-je ?</button></a></li>
-                    <li class="listemenu"><a href="Mes_competences.html" class="lienpages"><button class="onglet">Compétences</button></a></li>
+                    
+                    <li class="listemenu"><a href="Mes_competences.html" class="lienpages"><button class="onglet">Expériences professionnelles / Compétences</button></a></li>
                     <li class="listemenu"><a href="realisations.html" class="lienpages"><button class="onglet">Réalisations</button></a></li>
                     <li class="listemenu"><a href="Veille_technologique.html" class="lienpages"><button class="onglet">Veille technologique</button></a></li>
                     <li class="listemenu"><a href="Contact.html" class="lienpages"><button class="onglet">Contact</button></a></li>
@@ -23,13 +23,28 @@
         </div>
 
 
-        <section id="bienvenue">
-
-            <center><img alt="photo du propriétaire du site" src="IMG/image_presentation.jpg"/><p><b>Bienvenue sur mon portfolio !<br><br>
-            Je vous invite à vous diriger sur ma page <a href="Qui_suis_je.html" id="ici">Qui suis-je ?</a></b><br><br>
+        <div id="bienvenue">
+            <section class="green"></section>
+            <section id="accueil">
+            <center><img alt="photo du propriétaire du site" src="IMG/image_presentation.jpg"/><p><b>Bienvenue sur le portfolio d'Axel GROUSSAUD !<br><br>
+            Je vous invite à vous diriger en bas de cette page pour découvrir qui suis-je.</b> <br><br>
             <a href="IMG/cv.pdf"><button id="cv">Télécharger cv</button></a>
             </p></center>
-        </section>
+            </section>
+            <section class="green"></section>
+        </div>
+        <div>
+            <div id="perso">
+                <p>
+                    <b>Bienvenue sur mon Portfolio!</b><br><br>  
+                    Je m’appelle <b>Axel GROUSSAUD</b>, j’ai <b>21 ans</b>, j’<b>habite</b> à <b>Annecy le Vieux</b> et je suis <b>étudiant</b> en <b>2ème année</b> de <b>BTS SIO option SLAM au Lycée Saint Michel</b> à <b>Annecy</b> après avoir <b>obtenu</b> un <b>baccalauréat STMG option SIG</b> en <b>2019</b>.<br><br> 
+                    En tant que <b>joueur de jeux vidéos amateur</b>, depuis que je <b>muscle</b> mes <b>doigts</b> (surtout les <b>pouces</b>), je suis <b>passionné</b> par le <b>développement</b> et <b>comprendre comment</b> est <b>créée</b> une <b>application</b>. <br><br>
+                    J’aime  également faire des <b>randonnées</b> à <b>pied</b>, en <b>vélos</b> et en <b>roller</b>, histoire de prendre l’air !<br><br>
+                    Je suis <b>créatif</b>, <b>persévérant</b> et <b>organisé.</b> <br><br>
+                    Je vous <b>invite</b> à <b>mieux</b> me <b>connaître</b> en <b>visitant</b> mes <b>pages…</b> 
+                </p> 
+            </div>
+        </div>
         <div id="ML">
             <a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
         </div>
