--- a/Mes_realisations/lsrgames_reservation_app.html
+++ b/Mes_realisations/lsrgames_reservation_app.html
@@ -12,8 +12,8 @@
             <nav id="navigation">
                 <ul id="listenonord">
                     <li class="listemenu"><a href="/../index.html" class="lienpages"><button class="onglet">Accueil</button></a></li>
-                    <li class="listemenu"><a href="/../Qui_suis_je.html" class="lienpages"><button class="onglet">Qui suis-je ?</button></a></li>
-                    <li class="listemenu"><a href="/../Mes_competences.html" class="lienpages"><button class="onglet">Compétences</button></a></li>
+                    
+                    <li class="listemenu"><a href="/../Mes_competences.html" class="lienpages"><button class="onglet">Expériences professionnelles / Compétences</button></a></li>
                     <li class="listemenu"><a href="/../realisations.html" class="lienpages"><button class="onglet">Réalisations</button></a></li>
                     <li class="listemenu"><a href="/../Veille_technologique.html" class="lienpages"><button class="onglet">Veille technologique</button></a></li>
                     <li class="listemenu"><a href="/../Contact.html" class="lienpages"><button class="onglet">Contact</button></a></li>
