coming finish color design

--- a/Contact.html
+++ b/Contact.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="CSS/Contact.css" />
         <link rel="stylesheet" href="CSS/menu.css" />
         <link rel="stylesheet" href="CSS/Mentions_legales.css" />
+        <link rel="stylesheet" href="CSS/font-family.css" />
         <title>Contact</title>
     </head>
     <body>
@@ -22,12 +23,13 @@
         </div>
         
         <div id="espace">
-            <center><div id="mail">
-                <p>Vous pouvez me contacter avec mon adresse mail professionnel :<br><br>
-                groussaudaxelpro@gmail.com</p>
+            <div class="white">
+                <center><div id="mail">
+                    <p>Vous pouvez me contacter avec mon adresse mail professionnel :<br><br>
+                    groussaudaxelpro@gmail.com</p>
 
-            </div></center>
-
+                </div></center>
+            </div>
             <div id="choix">
                 <center>
                     <div id="blank">
@@ -36,12 +38,13 @@
                 </center>
             </div>
 
+            <div class="white">
+                <center><div id="linkedin">
+                    <p>Vous pouvez me contacter sur LinkedIn :<br><br>
+                    <a href="https://www.linkedin.com/in/axel-groussaud-7331a018a/">Mon compte LinkedIn</a></p>
 
-            <center><div id="linkedin">
-                <p>Vous pouvez me contacter sur LinkedIn :<br><br>
-                <a href="https://www.linkedin.com/in/axel-groussaud-7331a018a/">Mon compte LinkedIn</a></p>
-
-            </div></center>
+                </div></center>
+            </div>
         </div>
         <div id="ML">
             <a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
