--- a/Mes_realisations/app_tablet.html
+++ b/Mes_realisations/app_tablet.html
@@ -22,8 +22,10 @@
         </div>
         <div id="home">
             <div id="description">
+                <div id="white">
                 <p> Dans le cadre des projets personnels encadrés, j'ai eu l'occasion de concevoir une application au format tablette avec le framework Symfony. 
                 Cette application peut publier des photos, des vidéos et des commentaires.</p>
+            </div>
             </div>
         </div>
 
