--- a/Mes_realisations/challenge_alexa.html
+++ b/Mes_realisations/challenge_alexa.html
@@ -22,11 +22,13 @@
         </div>
         <div id="home">
             <div id="description">
+                <div id="white">
                 <p>
                     Dans le cadre d'un challenge proposé par les professeurs de BTS SIO, j'ai eu la chance de particper à un projet qui consiste à créer une skill
                     Alexa dont le but de cette skill est de donner un accord entre une boisson et un plat. Si vous souhaitez en savoir plus vous pouvez visiter ces liens :<br><br>
                     <a href="https://www.st-michel.fr/enseignement-superieur/actualites/challenge-sio-2020">Présentation du concept</a> et (<a href="https://wine-not.jonathan-brea.fr/">Compte-rendu</a>)
                 </p>
+            </div>
             </div>
         </div>
         <div id="ML">
