--- a/Mes_realisations/ecommerce.html
+++ b/Mes_realisations/ecommerce.html
@@ -22,6 +22,7 @@
         </div>
         <div id="home">
             <div id="description">
+                <div id="white">
             <p>
                 
                     Dans le cadre de ma formation en <b>terminale STMG</b> option <b>SIG</b> au <b>Lycée Polyvalent des Glières</b> à <b>Annemasse</b>, j'ai réalisé avec 3 
@@ -33,6 +34,7 @@
                     <br><br>
                 
                 </p> 
+            </div>
             </div>
         </div>
         <div id="ML">
