--- a/Mes_realisations/lsrgames_reservation_app.html
+++ b/Mes_realisations/lsrgames_reservation_app.html
@@ -22,10 +22,12 @@
         </div>
         <div id="home">
             <div id="description">
+                <div id="white">
                 <p> 
                     Dans le cadre des projets personnels encadrés, j'ai eu l'occasion de réaliser une application en client lourd qui gère les réservations.
                     C'est une application qui a été conçu avec le language C#.
                 </p>
+            </div>
             </div>
         </div>
 
