--- a/Mes_realisations/ppepicasso.html
+++ b/Mes_realisations/ppepicasso.html
@@ -22,12 +22,14 @@
         </div>
         <div id="home">
             <div id="description">
+                <div id="white">
                 <p>
                     J'ai eu l'occasion de réaliser un site statique sur Picasso dans le cadre des projets personnels encadrés (PPE) du BTS SIO
                     option SLAM en première année au Lycée Saint Michel à Annecy. Pour réaliser ce site j'ai utilisé les languages HTML, CSS et Javascript avec la bibliothèque JQuerie. 
                     Le Javascript servait essentiellement à afficher des images aléatoire dans un carrousel. 
                     Ensuite j'ai fait évoluer le site en le rendant dynamique avec PHP. 
                 </p>
+            </div>
             </div>
         </div>
 
