--- a/Mes_realisations/stage_ntn_snr.html
+++ b/Mes_realisations/stage_ntn_snr.html
@@ -22,10 +22,12 @@
         </div>
         <div id="home">
             <div id="description">
+                <div id="white">
                 <p> 
                     Dans le cadre de ma formation, j'ai eu l'opportunité de réaliser un stage chez NTN-SNR. Le but du stage était principalement de créer un mini-site 
                     mais je me suis occupé du déploiement du site avec l'environnement Gitlab et Docker.
                 </p>
+            </div>
             </div>
         </div>
 
