--- a/Veille_technologique.html
+++ b/Veille_technologique.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="CSS/Veille_technologique.css" />
         <link rel="stylesheet" href="CSS/menu.css" />
         <link rel="stylesheet" href="CSS/Mentions_legales.css" />
+        <link rel="stylesheet" href="CSS/font-family.css" />
         <title>Veille technologique</title>
     </head>
     <body>
@@ -24,8 +25,8 @@
 
             <table class="tab">
                 <tr class="ligne">
-                    <td class="cell">photo</td>
-                    <td class="cell">L'intelligence artificielle</td>
+                    <td class="cell"></td>
+                    <td class="cell">2020 - 2021 : L'intelligence artificielle</td>
                 </tr>
             </table>
             <div class="lienprojet">
