--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="CSS/Accueil.css" />
         <link rel="stylesheet" href="CSS/menu.css" />
         <link rel="stylesheet" href="CSS/Mentions_legales.css" />
+        <link rel="stylesheet" href="CSS/font-family.css" />
     </head>
     <body>
 
@@ -28,12 +29,19 @@
             <section id="accueil">
             <center><img alt="photo du propriétaire du site" src="IMG/image_presentation.jpg"/><p><b>Bienvenue sur le portfolio d'Axel GROUSSAUD !<br><br>
             Je vous invite à vous diriger en bas de cette page pour découvrir qui suis-je.</b> <br><br>
-            <a href="IMG/cv.pdf"><button id="cv">Télécharger cv</button></a>
+            <table>
+                <tr>
+                    <td><a href="IMG/cv.pdf"><button id="cv">Télécharger cv</button></a></td>
+                    <td><a href="IMG/AXEL_GROUSSAUD_BTS_SIO_E6_tableau_synthese_2021.pdf"><button id="tabcomp">Tableau de compétences</button></a></td>
+                        
+                </tr>
+            </table>
             </p></center>
             </section>
             <section class="green"></section>
         </div>
         <div>
+            
             <div id="perso">
                 <p>
                     <b>Bienvenue sur mon Portfolio!</b><br><br>  
