--- a/realisations.html
+++ b/realisations.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="CSS/Realisations.css" />
         <link rel="stylesheet" href="CSS/menu.css" />
         <link rel="stylesheet" href="CSS/Mentions_legales.css" />
+        <link rel="stylesheet" href="CSS/font-family.css" />
         <title>Réalisations</title>
     </head>
     <body>
@@ -24,7 +25,7 @@
 
             <table class="tab">
                 <tr class="ligne">
-                    <td class="cell">photo</td>
+                    <td class="cell"></td>
                     <td class="cell">2021 : Réalisation d'une application tablette qui publie des photos, vidéos et commentaires</td>
                 </tr>
             </table>
@@ -37,7 +38,7 @@
         
         <table class="tab">
             <tr class="ligne">
-                <td class="cell">photo</td>
+                <td class="cell"></td>
                 <td class="cell">2020 : Réalisation d'une aplication de réservation</td>
             </tr>
         </table>
@@ -47,7 +48,7 @@
         <hr>
         <table class="tab">
             <tr class="ligne">
-                <td class="cell">photo</td>
+                <td class="cell"></td>
                 <td class="cell">2020 - 2021 : Réalisation d'un portfolio</td>
             </tr>
         </table>
@@ -57,7 +58,7 @@
         <hr>
         <table class="tab">
             <tr class="ligne">
-                <td class="cell">photo</td>
+                <td class="cell"></td>
                 <td class="cell">2020 : Challenge -> réaliser une skill Alexa</td>
             </tr>
         </table>
@@ -67,7 +68,7 @@
         <hr>
         <table class="tab">
             <tr class="ligne">
-                <td class="cell">Photo de Pablo Picasso</td>
+                <td class="cell"></td>
                 <td class="cell">2019 - 2020 : Réalisation d'un site statique sur Picasso puis le rendre dynamique</td>
             </tr>
         </table>
@@ -77,7 +78,7 @@
         <hr>
         <table class="tab">
             <tr class="ligne">
-                <td class="cell"><img src="IMG/logoTerminaleSTMG.PNG"/></td>
+                <td class="cell"></td>
                 <td class="cell">2019 : Réalisation d'un site e-commerce avec base de données</td>
             </tr>
         </table>
