--- a/Mes_articles/article_IA.html
+++ b/Mes_articles/article_IA.html
@@ -20,6 +20,7 @@
                 </ul>
             </nav>
         </div>
+        <div id="espace"></div>
         <div id="home">
             <div id="article">
                 <div>
