--- a/Mes_realisations/portfolio.html
+++ b/Mes_realisations/portfolio.html
@@ -22,7 +22,9 @@
         </div>
         <div id="home">
             <div id="description">
+                <div id="white">
                 <p> Dans le cadre de ma formation, j'ai eu l'occasion de réaliser ce portfolio.</p>
+            </div>
             </div>
         </div>
 
