--- a/Mes_competences.html
+++ b/Mes_competences.html
@@ -38,7 +38,7 @@
             <tr class="ligne">
                 <td class="w"><img src="IMG/ntn-snr.PNG"/></td>
                 <td class="white">Janvier - Février 2021 : Stage chez NTN-SNR de 5 semaines
-                    <p>Le but du stage était de réaliser un mini-site sous le CMS Drupal mais je me suis principalment 
+                    <p>Le but du stage était de réaliser un mini-site sous le CMS Drupal mais je me suis principalement 
                         occupé de son déploiement avec Gitlab. Durant ce stage j'ai découvert les technologies Docker et l'environnement Gitlab. 
                     </p>
                 </td>
